<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_margin="5dp"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        app:srcCompat="@drawable/gg" />

    <EditText
        android:layout_margin="5dp"
        android:background="@drawable/text_edit"
        android:padding="5dp"
        android:id="@+id/mail_log"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/pass_log"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="@drawable/text_edit"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:layout_margin="5dp"

        android:id="@+id/button"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="150dp"
        android:background="@color/yellow"
        android:onClick="loginlogin"
        android:text="@string/login"
        android:textColor="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/creatnew"

            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@color/yellow"
            android:onClick="creatnew"
            android:text="@string/creat"
            android:textColor="#0288D1" />
    </LinearLayout>

</LinearLayout>